--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ var rm = Array(m1, m2, m3, m4, m5, m6, m7, m8, m9, m10, m11, m12, m13, m14, m15,
 var item = rm[Math.floor(Math.random()*rm.length)];
 
 document.getElementById("p1").innerHTML = item;
+  console.log(item);
 </script>
 
 <p id="p1"></p>
