--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <title>Dayne Bot Moderator</title>
 </head>
+<body>
+<p id="p1"></p>
 <script>
 var m1 = "It is certain";
 var m2 = "It is decidedly so";
@@ -25,10 +27,9 @@ var m19 = "Outlook not so good";
 var m20 = "Very doubtful";
 
 var rm = Array(m1, m2, m3, m4, m5, m6, m7, m8, m9, m10, m11, m12, m13, m14, m15, m16, m17, m18, m19, m20);
-var item = rm[Math.floor(Math.random()*rm.length)];
 
+var item = rm[Math.floor(Math.random()*rm.length)];
 document.getElementById("p1").innerHTML = item;
   console.log(item);
 </script>
-
-<p id="p1"></p>
+</body>
